Fixed up ComponentContainer, so that it's up to the entity implementation to decide what type of itself it wants to pass in via a virtual override function getThisAsEntity().
I found out that std has the enable_shared_from_this, which allows a class to return itself as the shared_ptr that owns it, using shared_from_this(). So now, the Entity implementation under tests/ uses this approach, and the NewApproach test I added implements it.

Currently no other tests nor examples will work...

--- a/tests/NewApproach/CMakeLists.txt
+++ b/tests/NewApproach/CMakeLists.txt
@@ -23,7 +23,33 @@
 #
 ###
 
-add_subdirectory(NewApproach)
-#add_subdirectory(Delegates)
-#add_subdirectory(Serialization)
-add_subdirectory(Common)
+cmake_minimum_required(VERSION 2.8.3)
+
+project(TestNewApproach)
+
+set(HDRS
+  #../../include/Totem/Addons/TemplateEventHandler.h
+  #../../include/Totem/Addons/DelegateHandler.h
+  ../Common/Entity.h
+  #../Common/CustomPropertySerializer.h
+  #../Common/Vector3.h
+  ./TestSystem.h
+  ./TestComponent.h
+)
+
+set(SRCS
+  ./main.cpp
+  #../../src/Addons/TemplateEventHandler.cpp
+  #../../src/Addons/DelegateHandler.cpp
+  ./TestComponent.cpp
+)
+ 
+add_executable(TestNewApproach ${HDRS} ${SRCS})
+
+set_target_properties(TestNewApproach PROPERTIES DEBUG_POSTFIX _d)
+set_target_properties(TestNewApproach PROPERTIES FOLDER "Tests")
+
+
+target_link_libraries(TestNewApproach
+  TotemEDK
+)
