Working on branching out tests into Standard and ClanLib specific tests. For some reason, the ClanLib version seems to crash right now when getting a Property off of the component... shouldn't be too hard to work out exactly why :)

--- a/depends/ClanLib/CMakeLists.txt
+++ b/depends/ClanLib/CMakeLists.txt
@@ -47,6 +47,7 @@ add_preprocess_pair_regex("sigslot::signal(.)"		"CL_Signal_v\\\\1")
 add_preprocess_pair("#include <string>"		" ")
 add_preprocess_pair("#include <memory>"		" ")
 add_preprocess_pair("#include \"../../depends/Standard/sigslot.h\""		" ")
+add_preprocess_pair("#include \"../../../depends/Standard/sigslot.h\"" " ")
 add_preprocess_pair("#pragma once"		"#pragma once\n#include <ClanLib/core.h>")
 
 set(package_src_files)
