Fixed example for Standard.

--- a/tests/Standard/NewApproach/CMakeLists.txt
+++ b/tests/Standard/NewApproach/CMakeLists.txt
@@ -50,5 +50,5 @@ set_target_properties(TestNewApproach PROPERTIES FOLDER "Tests")
 
 
 target_link_libraries(TestNewApproach
-  TotemEDK_ClanLib
+  TotemEDK
 )
