--- a/trunk/tests/Standard/NewApproach/CMakeLists.txt
+++ b/trunk/tests/Standard/NewApproach/CMakeLists.txt
@@ -52,3 +52,7 @@ set_target_properties(TestNewApproach PROPERTIES FOLDER "Tests")
 target_link_libraries(TestNewApproach
   TotemEDK
 )
+
+include_directories(
+  "../../../depends/Standard/"
+)
