Build Examples is deprecated for now, thus set to false by default in CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ include(${CMAKE_SOURCE_DIR}/cmake/preprocessor.cmake)
 
 set(BUILD_TEST_PROJECTS TRUE CACHE BOOL "TRUE if you want to include test projects with the generated solution, FALSE if not.")
 
-set(BUILD_EXAMPLE_PROJECTS TRUE CACHE BOOL "TRUE if you want to include example projects with the generated solution, FALSE if not.")
+set(BUILD_EXAMPLE_PROJECTS FALSE CACHE BOOL "TRUE if you want to include example projects with the generated solution, FALSE if not.")
 if(BUILD_EXAMPLE_PROJECTS)
 	add_subdirectory(examples)
 endif()
