Took out some deprecated dependencies + took out the Shared properties and unified the implementation for both Entity and Component level properties (we found we'd need all features in both cases after all). Thus both entity and component level properties are no just properties.
Next, we also found that to change from addProperty to just add, and same for get, would be cool, so I added that change as well so we can get a feel for how that's like to work with.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,10 +42,8 @@ set(HDRS
   ../include/Totem/IPropertyList.h
   ../include/Totem/Property.h
   ../include/Totem/PropertyContainer.h
-  ../include/Totem/SharedProperty.h
-  ../include/Totem/SharedPropertyContainer.h
-  ../include/Totem/SharedPropertyList.h
-  ../include/Totem/SharedPropertyListContainer.h
+  ../include/Totem/PropertyList.h
+  ../include/Totem/PropertyListContainer.h
   ../include/Totem/mainpage.h
 )
 
@@ -55,10 +53,8 @@ set(SRCS
   ./ComponentContainer.cpp
   ./Property.cpp
   ./PropertyContainer.cpp
-  ./SharedProperty.cpp
-  ./SharedPropertyContainer.cpp
-  ./SharedPropertyList.cpp
-  ./SharedPropertyListContainer.cpp
+  ./PropertyList.cpp
+  ./PropertyListContainer.cpp
 )
 
 include_directories(
