--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -88,10 +88,9 @@ endif()
 set(TOTEM_WITHOUT_PREPROCESSING TRUE CACHE BOOL "TRUE if you want Totem EDK's codebase without any preprocessing , FALSE if not.")
 if(TOTEM_WITHOUT_PREPROCESSING)
 	include_directories("${CMAKE_SOURCE_DIR}"
-	  "${CMAKE_SOURCE_DIR}/src"
 	  "${CMAKE_SOURCE_DIR}/include"
 	)
-	add_subdirectory(src)
+	#add_subdirectory(src)
 	
 	if(BUILD_TEST_PROJECTS)
 		add_subdirectory(tests/Standard)
@@ -101,7 +100,6 @@ endif()
 set(PREPROCESS_TOTEM_FOR_CLANLIB FALSE CACHE BOOL "TRUE if you want to preprocess Totem EDK's codebase with ClanLib 3rdparty bindings, FALSE if not.")
 if(PREPROCESS_TOTEM_FOR_CLANLIB)
 	include_directories("${CMAKE_SOURCE_DIR}"
-	  "${CMAKE_SOURCE_DIR}/editions/clanlib/src"
 	  "${CMAKE_SOURCE_DIR}/editions/clanlib/include"
 	)
 	add_subdirectory(depends/ClanLib)
