Took out the src/ folder of Totem, which in effect erase the TotemEDK and TotemEDK_Clanlib projects, since Totem really only consist of header files.
Thus, the preprocessor has been rewritten also to only work on header files, plus the NewApproach tests for Standard and ClanLib has been rewritten to respect this new change.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,10 +88,9 @@ endif()
 set(TOTEM_WITHOUT_PREPROCESSING TRUE CACHE BOOL "TRUE if you want Totem EDK's codebase without any preprocessing , FALSE if not.")
 if(TOTEM_WITHOUT_PREPROCESSING)
 	include_directories("${CMAKE_SOURCE_DIR}"
-	  "${CMAKE_SOURCE_DIR}/src"
 	  "${CMAKE_SOURCE_DIR}/include"
 	)
-	add_subdirectory(src)
+	#add_subdirectory(src)
 	
 	if(BUILD_TEST_PROJECTS)
 		add_subdirectory(tests/Standard)
@@ -101,7 +100,6 @@ endif()
 set(PREPROCESS_TOTEM_FOR_CLANLIB FALSE CACHE BOOL "TRUE if you want to preprocess Totem EDK's codebase with ClanLib 3rdparty bindings, FALSE if not.")
 if(PREPROCESS_TOTEM_FOR_CLANLIB)
 	include_directories("${CMAKE_SOURCE_DIR}"
-	  "${CMAKE_SOURCE_DIR}/editions/clanlib/src"
 	  "${CMAKE_SOURCE_DIR}/editions/clanlib/include"
 	)
 	add_subdirectory(depends/ClanLib)
