Took out TOTEM_WITHOUT_PREPROCESSING in the cmake options, so that if you choose NOT to build with PREPROCESS_FOR_CLANLIB, then you will automatically just use totem without any preprocessing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,18 +85,6 @@ if(BUILD_TOOL_PROJECTS)
 	add_subdirectory(tools)
 endif()
 
-set(TOTEM_WITHOUT_PREPROCESSING TRUE CACHE BOOL "TRUE if you want Totem EDK's codebase without any preprocessing , FALSE if not.")
-if(TOTEM_WITHOUT_PREPROCESSING)
-	include_directories("${CMAKE_SOURCE_DIR}"
-	  "${CMAKE_SOURCE_DIR}/include"
-	)
-	#add_subdirectory(src)
-	
-	if(BUILD_TEST_PROJECTS)
-		add_subdirectory(tests/Standard)
-	endif()
-endif()
-
 set(PREPROCESS_TOTEM_FOR_CLANLIB FALSE CACHE BOOL "TRUE if you want to preprocess Totem EDK's codebase with ClanLib 3rdparty bindings, FALSE if not.")
 if(PREPROCESS_TOTEM_FOR_CLANLIB)
 	include_directories("${CMAKE_SOURCE_DIR}"
@@ -106,5 +94,14 @@ if(PREPROCESS_TOTEM_FOR_CLANLIB)
 	
 	if(BUILD_TEST_PROJECTS)
 		add_subdirectory(tests/ClanLib)
+	endif()
+else()
+	include_directories("${CMAKE_SOURCE_DIR}"
+	  "${CMAKE_SOURCE_DIR}/include"
+	)
+	#add_subdirectory(src)
+	
+	if(BUILD_TEST_PROJECTS)
+		add_subdirectory(tests/Standard)
 	endif()
 endif()
