Improved the runtime type info of IProperty/Property to be reliable between runs, and also added the same functionality to Components now via the new IComponent. Now Component requires the user to add the Component Implementation Type in as first template argument to Component, so that Component automatically can get IComponent to generate the RTTI.
Thus, Component Implementations no longer need to specify the getType function.

--- a/tests/Standard/NewApproach/CMakeLists.txt
+++ b/tests/Standard/NewApproach/CMakeLists.txt
@@ -28,10 +28,13 @@ cmake_minimum_required(VERSION 2.8.3)
 project(TestNewApproach)
 
 set(TOTEM_HDRS
+  ../../../include/Totem/IComponent.h
   ../../../include/Totem/Component.h
   ../../../include/Totem/ComponentContainer.h
+  ../../../include/Totem/IProperty.h
   ../../../include/Totem/Property.h
   ../../../include/Totem/PropertyContainer.h
+  ../../../include/Totem/IPropertyList.h
   ../../../include/Totem/PropertyList.h
   ../../../include/Totem/PropertyListContainer.h
   ../../../include/Totem/HashedString.h
