--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -76,9 +76,6 @@ include(${CMAKE_SOURCE_DIR}/cmake/preprocessor.cmake)
 set(BUILD_TEST_PROJECTS TRUE CACHE BOOL "TRUE if you want to include test projects with the generated solution, FALSE if not.")
 
 set(BUILD_EXAMPLE_PROJECTS FALSE CACHE BOOL "TRUE if you want to include example projects with the generated solution, FALSE if not.")
-if(BUILD_EXAMPLE_PROJECTS)
-	#add_subdirectory(examples)
-endif()
 
 set(BUILD_TOOL_PROJECTS FALSE CACHE BOOL "TRUE if you want to include tool projects with the generated solution, FALSE if not.")
 if(BUILD_TOOL_PROJECTS)
@@ -94,6 +91,9 @@ if(PREPROCESS_TOTEM_FOR_CLANLIB)
 	
 	if(BUILD_TEST_PROJECTS)
 		add_subdirectory(tests/ClanLib)
+	endif()
+	if(BUILD_EXAMPLE_PROJECTS)
+		add_subdirectory(examples/ClanLib)
 	endif()
 else()
 	include_directories("${CMAKE_SOURCE_DIR}"
