--- a/examples/ClanLib/RedBall/RedBall.vcxproj
+++ b/examples/ClanLib/RedBall/RedBall.vcxproj
@@ -17,11 +17,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -72,6 +70,7 @@
   <ItemGroup>
     <ClCompile Include="component_bounce.cpp" />
     <ClCompile Include="component_colorshift.cpp" />
+    <ClCompile Include="component_sound.cpp" />
     <ClCompile Include="component_visual.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="precomp.cpp">
@@ -80,16 +79,19 @@
     </ClCompile>
     <ClCompile Include="program.cpp" />
     <ClCompile Include="redballapp.cpp" />
+    <ClCompile Include="sound_manager.cpp" />
     <ClCompile Include="visual_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="component_bounce.h" />
     <ClInclude Include="component_colorshift.h" />
+    <ClInclude Include="component_sound.h" />
     <ClInclude Include="component_visual.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="precomp.h" />
     <ClInclude Include="program.h" />
     <ClInclude Include="redballapp.h" />
+    <ClInclude Include="sound_manager.h" />
     <ClInclude Include="visual_manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
