--- a/trunk/tests/Standard/CoreFunctionality/CMakeLists.txt
+++ b/trunk/tests/Standard/CoreFunctionality/CMakeLists.txt
@@ -25,7 +25,7 @@
 
 cmake_minimum_required(VERSION 2.8.3)
 
-set(NAME TestFunctionality)
+set(NAME TestCoreFunctionality)
 project(${NAME})
 
 set(TOTEM_HDRS
