--- a/trunk/bin/resources/Standard/Roguelike/Entities/Items.cfg
+++ b/trunk/bin/resources/Standard/Roguelike/Entities/Items.cfg
@@ -63,7 +63,7 @@ entity "item"
 				//Properties
 				Message="The %s gets burned for %g hit points."
 				Amount=-12.0
-				TargetSelector="SelectRange"
+				TargetSelector="SelectedRange"
 				TargetRange=3.0
 			}
 		}
