--- a/examples/Standard/CMakeLists.txt
+++ b/examples/Standard/CMakeLists.txt
@@ -23,4 +23,8 @@
 #
 ###
 
-add_subdirectory(Roguelike)
+set(BUILD_ROGUELIKE_EXAMPLE FALSE CACHE BOOL "TRUE to include a Roguelike example project (advanced). NOTE: This depends on LibTCOD!")
+
+if(BUILD_ROGUELIKE_EXAMPLE)
+	add_subdirectory(Roguelike)
+endif()
