--- a/trunk/bin/resources/Standard/Roguelike/Entities/Monsters.cfg
+++ b/trunk/bin/resources/Standard/Roguelike/Entities/Monsters.cfg
@@ -10,8 +10,8 @@ entity "monster"
 	entity "orc"
 	{
 		//Properties
-		Charater='o'
-		Color="desaturatedGreen"
+		Character='o'
+		Color="63,127,63"
 		Defense=0.0
 		MaxHP=10.0
 		HP=10.0
@@ -22,7 +22,7 @@ entity "monster"
 	{
 		//Properties
 		Character='T'
-		Color="darkerGreen"
+		Color="0,127,0"
 		Defense=2.0
 		MaxHP=16.0
 		HP=16.0
