Can now instantiate monsters via the monster system based on family type and rank. This makes it easier to abstract the C++ code for spawning monsters, and makes it easier to modify and expand the data files without making changes to the C++ side.
Started on the persistence tutorial.

--- a/bin/resources/Standard/Roguelike/Entities/Monsters.cfg
+++ b/bin/resources/Standard/Roguelike/Entities/Monsters.cfg
@@ -7,26 +7,43 @@ entity "monster"
 	Attacker
 	
 	//Monster types
-	entity "orc"
+	entity "goblin"
 	{
 		//Properties
-		Character='o'
+		Character='g'
 		Color="63,127,63"
 		Defense=0.0
 		MaxHP=10.0
 		HP=10.0
 		Power=4.0
-		CorpseName="corpse of an orc"
+		CorpseName="corpse of a goblin"
+		Level=1
+		Family="Goblin"
+	}
+	entity "orc"
+	{
+		//Properties
+		Character='o'
+		Color="53,127,53"
+		Defense=2.0
+		MaxHP=16.0
+		HP=16.0
+		Power=15.0
+		CorpseName="corpse of a orc"
+		Level=2
+		Family="Goblin"
 	}
 	entity "troll"
 	{
 		//Properties
 		Character='T'
 		Color="0,127,0"
-		Defense=2.0
-		MaxHP=16.0
-		HP=16.0
-		Power=15.0
-		CorpseName="corpse of a troll"
+		Defense=8.0
+		MaxHP=64.0
+		HP=64.0
+		Power=60.0
+		CorpseName="corpse of a orc"
+		Level=3
+		Family="Goblin"
 	}
 }
