--- a/bin/resources/Standard/Roguelike/Entities/Items.cfg
+++ b/bin/resources/Standard/Roguelike/Entities/Items.cfg
@@ -7,65 +7,71 @@ entity "item"
 	//Properties
 	Blocks=false
 	
-	//Item types
-	entity "magic"
+	//Potion types
+	entity "empty flask"
 	{
 		//Components
-		Effect
+		Consumable
+		
+		//Properties
+		Character='!'
+		Color="127,127,127"
+		Amount=30.0
+	}
+}
+	
+//Item types
+entity "magic_item"
+{
+	//Components
+	Actor
+	Pickable
+	Effect
+	
+	//Properties
+	Blocks=false
 
-		//Maigc types
-		entity "potion"
-		{
-			//Components
-			Consumable
-			
-			//Properties
-			Character='!'
-			Color="white"
-			
-			//Potion types
-			entity "health potion"
-			{
-				//Components
-				Healer
-				
-				//Properties
-				Color="red"
-				Amount=30.0
-			}
-		}
-		entity "scroll"
-		{
-			//Components
-			Weave
-			
-			//Properties
-			Character='#'
-			Color="lightYellow"
-			
-			//Scroll types
-			entity "scroll of lightning bolt"
-			{
-				//Components
-				Healer
+	//Potion types
+	entity "health potion"
+	{
+		//Components
+		Consumable
+		Healer
+		
+		//Properties
+		Character='!'
+		Color="255,0,0"
+		Amount=30.0
+	}
+	
+		
+	//Scroll types
+	entity "scroll of lightning bolt"
+	{
+		//Components
+		Weave
+		Healer
 
-				//Properties
-				Message="A lighting bolt strikes the %s with a loud thunder!\nThe damage is %g hit points."
-				Amount=-20.0
-				TargetSelector="ClosestMonster"
-				TargetRange=5.0
-			}
-			entity "scroll of fireball"
-			{
-				//Components
-				Healer
+		//Properties
+		Character='#'
+		Color="255,255,63"
+		Message="A lighting bolt strikes the %s with a loud thunder!\nThe damage is %g hit points."
+		Amount=-20.0
+		TargetSelector="ClosestMonster"
+		TargetRange=5.0
+	}
+	entity "scroll of fireball"
+	{
+		//Components
+		Weave
+		Healer
 
-				//Properties
-				Message="The %s gets burned for %g hit points."
-				Amount=-12.0
-				TargetSelector="SelectedRange"
-				TargetRange=3.0
-			}
-		}
+		//Properties
+		Character='#'
+		Color="255,255,63"
+		Message="The %s gets burned for %g hit points."
+		Amount=-12.0
+		TargetSelector="SelectedRange"
+		TargetRange=3.0
 	}
 }
