--- a/trunk/bin/resources/Standard/Roguelike/Entities/Items.cfg
+++ b/trunk/bin/resources/Standard/Roguelike/Entities/Items.cfg
@@ -18,24 +18,13 @@ entity "item"
 		Color="127,127,127"
 		Amount=30.0
 	}
-}
-	
-//Item types
-entity "magic_item"
-{
-	//Components
-	Actor
-	Pickable
-	Effect
-	
-	//Properties
-	Blocks=false
 
 	//Potion types
 	entity "health potion"
 	{
 		//Components
 		Consumable
+		Effect
 		Healer
 		
 		//Properties
@@ -50,12 +39,13 @@ entity "magic_item"
 	{
 		//Components
 		Weave
+		Effect
 		Healer
 
 		//Properties
 		Character='#'
 		Color="255,255,63"
-		Message="A lighting bolt strikes the %s with a loud thunder!\nThe damage is %g hit points."
+		HealerMessage="A lighting bolt strikes the %s with a loud thunder!\nIt causes %g hit points."
 		Amount=-20.0
 		TargetSelector="ClosestMonster"
 		TargetRange=5.0
@@ -64,12 +54,13 @@ entity "magic_item"
 	{
 		//Components
 		Weave
+		Effect
 		Healer
 
 		//Properties
 		Character='#'
 		Color="255,255,63"
-		Message="The %s gets burned for %g hit points."
+		HealerMessage="The %s gets burned for %g hit points."
 		Amount=-12.0
 		TargetSelector="SelectedRange"
 		TargetRange=3.0
