Almost there with the persistence.

--- a/bin/resources/Standard/Roguelike/Entities/Monsters.cfg
+++ b/bin/resources/Standard/Roguelike/Entities/Monsters.cfg
@@ -20,6 +20,13 @@ entity "monster"
 		Level=1
 		Family="Goblin"
 	}
+	entity "corpse of a goblin"
+	{
+		//Properties
+		Character='%'
+		Color="191,0,0"
+		Blocks=false
+	}
 	entity "orc"
 	{
 		//Properties
@@ -29,9 +36,16 @@ entity "monster"
 		MaxHP=16.0
 		HP=16.0
 		Power=15.0
-		CorpseName="corpse of a orc"
+		CorpseName="corpse of an orc"
 		Level=2
 		Family="Goblin"
+	}
+	entity "corpse of an orc"
+	{
+		//Properties
+		Character='%'
+		Color="191,0,0"
+		Blocks=false
 	}
 	entity "troll"
 	{
@@ -45,5 +59,12 @@ entity "monster"
 		CorpseName="corpse of a orc"
 		Level=3
 		Family="Goblin"
+	}
+	entity "corpse of a troll"
+	{
+		//Properties
+		Character='%'
+		Color="191,0,0"
+		Blocks=false
 	}
 }
