--- a/examples/ClanLib/AtharonRL/Sources/Client/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Client/CMakeLists.txt
@@ -46,12 +46,15 @@ if (MSVC)
 endif(MSVC)
 
 FIND_PACKAGE(ClanLib REQUIRED)
+FIND_PACKAGE(LibTCOD REQUIRED)
 TARGET_LINK_LIBRARIES(${NAME} 
 	debug ${CL_CORE_LIBRARY_DEBUG} 	 optimized ${CL_CORE_LIBRARY_RELEASE}
 	debug ${CL_DB_LIBRARY_DEBUG} 	 optimized ${CL_DB_LIBRARY_RELEASE}
 	debug ${CL_NET_LIBRARY_DEBUG} 	 optimized ${CL_NET_LIBRARY_RELEASE}
 	debug ${CL_SQ_LIBRARY_DEBUG} 	 optimized ${CL_SQ_LIBRARY_RELEASE}
 	debug ${CL_VORBIS_LIBRARY_DEBUG} optimized ${CL_VORBIS_LIBRARY_RELEASE}
+	${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
+	Engine
 )
 
 INCLUDE_DIRECTORIES(
