Engine now separated internally into Client, Common and Server folders.

--- a/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
@@ -13,47 +13,43 @@ file(GLOB HEADER_FILES *.h)
 file(GLOB SOURCE_FILES *.cpp)
 SOURCE_GROUP("Source Files\\" FILES ${HEADER_FILES} ${SOURCE_FILES})
 
-file(GLOB HEADER_FILES_AUDIO Audio/*.h)
-file(GLOB SOURCE_FILES_AUDIO Audio/*.cpp)
-SOURCE_GROUP("Source Files\\Audio\\" FILES ${HEADER_FILES_AUDIO} ${SOURCE_FILES_AUDIO})
+#ENGINE CLIENT FILES
+file(GLOB HEADER_FILES_CLIENT_AUDIO Client/Audio/*.h)
+file(GLOB SOURCE_FILES_CLIENT_AUDIO Client/Audio/*.cpp)
+SOURCE_GROUP("Source Files\\Client\\Audio\\" FILES ${HEADER_FILES_CLIENT_AUDIO} ${SOURCE_FILES_CLIENT_AUDIO})
 
-file(GLOB HEADER_FILES_GAMEWORLD GameWorld/*.h)
-file(GLOB SOURCE_FILES_GAMEWORLD GameWorld/*.cpp)
-SOURCE_GROUP("Source Files\\GameWorld\\" FILES ${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD})
+file(GLOB HEADER_FILES_CLIENT_SCENE Client/Scene/*.h)
+file(GLOB SOURCE_FILES_CLIENT_SCENE Client/Scene/*.cpp)
+SOURCE_GROUP("Source Files\\Client\\Scene\\" FILES ${HEADER_FILES_CLIENT_SCENE} ${SOURCE_FILES_CLIENT_SCENE})
 
-file(GLOB HEADER_FILES_JAVASCRIPT JavaScript/*.h)
-file(GLOB SOURCE_FILES_JAVASCRIPT JavaScript/*.cpp)
-SOURCE_GROUP("Source Files\\GameWorld\\" FILES ${HEADER_FILES_JAVASCRIPT} ${SOURCE_FILES_JAVASCRIPT})
+file(GLOB HEADER_FILES_CLIENT_UI Client/UIFramework/*.h)
+file(GLOB SOURCE_FILES_CLIENT_UI Client/UIFramework/*.cpp)
+SOURCE_GROUP("Source Files\\Client\\UIFramework\\" FILES ${HEADER_FILES_CLIENT_UI} ${SOURCE_FILES_CLIENT_UI})
 
-file(GLOB HEADER_FILES_NETWORK Network/*.h)
-file(GLOB SOURCE_FILES_NETWORK Network/*.cpp)
-SOURCE_GROUP("Source Files\\Network\\" FILES ${HEADER_FILES_NETWORK} ${SOURCE_FILES_NETWORK})
+#ENGINE COMMON FILES
+file(GLOB HEADER_FILES_COMMON_GAMEWORLD Common/GameWorld/*.h)
+file(GLOB SOURCE_FILES_COMMON_GAMEWORLD Common/GameWorld/*.cpp)
+SOURCE_GROUP("Source Files\\Common\\GameWorld\\" FILES ${HEADER_FILES_COMMON_GAMEWORLD} ${SOURCE_FILES_COMMON_GAMEWORLD})
 
-file(GLOB HEADER_FILES_PERF Performance/*.h)
-file(GLOB SOURCE_FILES_PERF Performance/*.cpp)
-SOURCE_GROUP("Source Files\\Performance\\" FILES ${HEADER_FILES_PERF} ${SOURCE_FILES_PERF})
+file(GLOB HEADER_FILES_COMMON_NETWORK Common/Network/*.h)
+file(GLOB SOURCE_FILES_COMMON_NETWORK Common/Network/*.cpp)
+SOURCE_GROUP("Source Files\\Common\\Network\\" FILES ${HEADER_FILES_COMMON_NETWORK} ${SOURCE_FILES_COMMON_NETWORK})
 
-file(GLOB HEADER_FILES_SCENE Scene/*.h)
-file(GLOB SOURCE_FILES_SCENE Scene/*.cpp)
-SOURCE_GROUP("Source Files\\Scene\\" FILES ${HEADER_FILES_SCENE} ${SOURCE_FILES_SCENE})
+file(GLOB HEADER_FILES_COMMON_PERF Common/Performance/*.h)
+file(GLOB SOURCE_FILES_COMMON_PERF Common/Performance/*.cpp)
+SOURCE_GROUP("Source Files\\Common\\Performance\\" FILES ${HEADER_FILES_COMMON_PERF} ${SOURCE_FILES_COMMON_PERF})
 
-file(GLOB HEADER_FILES_SCRIPTBINDINGS ScriptBindings/*.h)
-file(GLOB SOURCE_FILES_SCRIPTBINDINGS ScriptBindings/*.cpp)
-SOURCE_GROUP("Source Files\\ScriptBindings\\" FILES ${HEADER_FILES_SCRIPTBINDINGS} ${SOURCE_FILES_SCRIPTBINDINGS})
-
-file(GLOB HEADER_FILES_UI UIFramework/*.h)
-file(GLOB SOURCE_FILES_UI UIFramework/*.cpp)
-SOURCE_GROUP("Source Files\\UIFramework\\" FILES ${HEADER_FILES_UI} ${SOURCE_FILES_UI})
+#ENGINE SERVER FILES
+#...
  
 add_library(${NAME} STATIC 
 	${HEADER_FILES} ${SOURCE_FILES} 
-	${HEADER_FILES_AUDIO} ${SOURCE_FILES_AUDIO}
-	${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD}
-	${HEADER_FILES_NETWORK} ${SOURCE_FILES_NETWORK}
-	${HEADER_FILES_PERF} ${SOURCE_FILES_PERF}
-	${HEADER_FILES_SCENE} ${SOURCE_FILES_SCENE}
-	${HEADER_FILES_SCRIPTBINDINGS} ${SOURCE_FILES_SCRIPTBINDINGS}
-	${HEADER_FILES_UI} ${SOURCE_FILES_UI}
+	${HEADER_FILES_CLIENT_AUDIO} ${SOURCE_FILES_CLIENT_AUDIO}
+	${HEADER_FILES_CLIENT_SCENE} ${SOURCE_FILES_CLIENT_SCENE}
+	${HEADER_FILES_CLIENT_UI} ${SOURCE_FILES_CLIENT_UI}
+	${HEADER_FILES_COMMON_GAMEWORLD} ${SOURCE_FILES_COMMON_GAMEWORLD}
+	${HEADER_FILES_COMMON_NETWORK} ${SOURCE_FILES_COMMON_NETWORK}
+	${HEADER_FILES_COMMON_PERF} ${SOURCE_FILES_COMMON_PERF}
 	${TOTEM_HEADER} 
 	${CL_HEADER})
 
