--- a/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
@@ -6,9 +6,6 @@ PROJECT(${NAME})
 file(GLOB TOTEM_HEADER ${CMAKE_SOURCE_DIR}/Include/Totem/*.h)
 SOURCE_GROUP("Source Files\\Include\\Totem" FILES ${TOTEM_HEADER})
 
-file(GLOB CL_HEADER ${CMAKE_SOURCE_DIR}/Include/ClanLib/*.h)
-SOURCE_GROUP("Source Files\\Include\\ClanLib" FILES ${CL_HEADER})
-
 file(GLOB HEADER_FILES *.h)
 file(GLOB SOURCE_FILES *.cpp)
 SOURCE_GROUP("Source Files\\" FILES ${HEADER_FILES} ${SOURCE_FILES})
@@ -20,6 +17,10 @@ SOURCE_GROUP("Source Files\\Database\\" FILES ${HEADER_FILES_DATABASE} ${SOURCE_
 file(GLOB HEADER_FILES_GAMEWORLD GameWorld/*.h)
 file(GLOB SOURCE_FILES_GAMEWORLD GameWorld/*.cpp)
 SOURCE_GROUP("Source Files\\GameWorld\\" FILES ${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD})
+
+FIND_PACKAGE(ClanLib REQUIRED)
+file(GLOB CL_HEADER ${CL_DIR}/*.h)
+SOURCE_GROUP("Source Files\\Include\\ClanLib" FILES ${CL_HEADER})
 
 add_executable(${NAME} 
 	${HEADER_FILES} ${SOURCE_FILES} 
@@ -35,7 +36,6 @@ if (MSVC)
    set_source_files_properties(precomp.cpp PROPERTIES COMPILE_FLAGS "/Ycprecomp.h")
 endif(MSVC)
 
-FIND_PACKAGE(ClanLib REQUIRED)
 FIND_PACKAGE(LibTCOD REQUIRED)
 TARGET_LINK_LIBRARIES(${NAME} 
 	debug ${CL_CORE_LIBRARY_DEBUG} 	 optimized ${CL_CORE_LIBRARY_RELEASE}
