Fixed server side so that we actually load a character now and move on the the loading screen. + other stuff, like resource manager driven music, etc.

--- a/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
@@ -43,7 +43,11 @@ TARGET_LINK_LIBRARIES(${NAME}
 	debug ${CL_NET_LIBRARY_DEBUG} 	 optimized ${CL_NET_LIBRARY_RELEASE}
 	debug ${CL_SQ_LIBRARY_DEBUG} 	 optimized ${CL_SQ_LIBRARY_RELEASE}
 	debug ${CL_VORBIS_LIBRARY_DEBUG} optimized ${CL_VORBIS_LIBRARY_RELEASE}
+	debug ${CL_DISPLAY_LIBRARY_DEBUG} 	optimized ${CL_DISPLAY_LIBRARY_RELEASE}
+	debug ${CL_GUI_LIBRARY_DEBUG} 		optimized ${CL_GUI_LIBRARY_RELEASE}
+	debug ${CL_CSS_LIBRARY_DEBUG} 		optimized ${CL_CSS_LIBRARY_RELEASE}
 	${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
+	Engine
 )
 
 INCLUDE_DIRECTORIES(
