--- a/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
@@ -28,6 +28,10 @@ file(GLOB HEADER_FILES_COMMON_GAMEWORLD Common/GameWorld/*.h)
 file(GLOB SOURCE_FILES_COMMON_GAMEWORLD Common/GameWorld/*.cpp)
 SOURCE_GROUP("Source Files\\Common\\GameWorld\\" FILES ${HEADER_FILES_COMMON_GAMEWORLD} ${SOURCE_FILES_COMMON_GAMEWORLD})
 
+file(GLOB HEADER_FILES_COMMON_GAMEWORLD_COMPONENTS Common/GameWorld/Components/*.h)
+file(GLOB SOURCE_FILES_COMMON_GAMEWORLD_COMPONENTS Common/GameWorld/Components/*.cpp)
+SOURCE_GROUP("Source Files\\Common\\GameWorld\\Components\\" FILES ${HEADER_FILES_COMMON_GAMEWORLD_COMPONENTS} ${SOURCE_FILES_COMMON_GAMEWORLD_COMPONENTS})
+
 file(GLOB HEADER_FILES_COMMON_NETWORK Common/Network/*.h)
 file(GLOB SOURCE_FILES_COMMON_NETWORK Common/Network/*.cpp)
 SOURCE_GROUP("Source Files\\Common\\Network\\" FILES ${HEADER_FILES_COMMON_NETWORK} ${SOURCE_FILES_COMMON_NETWORK})
@@ -49,6 +53,7 @@ add_library(${NAME} STATIC
 	${HEADER_FILES_CLIENT_SCENE} ${SOURCE_FILES_CLIENT_SCENE}
 	${HEADER_FILES_CLIENT_UI} ${SOURCE_FILES_CLIENT_UI}
 	${HEADER_FILES_COMMON_GAMEWORLD} ${SOURCE_FILES_COMMON_GAMEWORLD}
+	${HEADER_FILES_COMMON_GAMEWORLD_COMPONENTS} ${SOURCE_FILES_COMMON_GAMEWORLD_COMPONENTS}
 	${HEADER_FILES_COMMON_NETWORK} ${SOURCE_FILES_COMMON_NETWORK}
 	${HEADER_FILES_COMMON_PERF} ${SOURCE_FILES_COMMON_PERF}
 	${TOTEM_HEADER} 
