Started work on the client for rendering. Somehow it renders a % right now.. not sure why, but at least it's a start :P

--- a/examples/ClanLib/AtharonRL/Sources/Client/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Client/CMakeLists.txt
@@ -18,6 +18,10 @@ file(GLOB HEADER_FILES_GAMEWORLD GameWorld/*.h)
 file(GLOB SOURCE_FILES_GAMEWORLD GameWorld/*.cpp)
 SOURCE_GROUP("Source Files\\GameWorld\\" FILES ${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD})
 
+file(GLOB HEADER_FILES_GAMEWORLD_COMPONENTS GameWorld/Components/*.h)
+file(GLOB SOURCE_FILES_GAMEWORLD_COMPONENTS GameWorld/Components/*.cpp)
+SOURCE_GROUP("Source Files\\GameWorld\\Components\\" FILES ${HEADER_FILES_GAMEWORLD_COMPONENTS} ${SOURCE_FILES_GAMEWORLD_COMPONENTS})
+
 file(GLOB HEADER_FILES_LOADINGSCREEN LoadingScreen/*.h)
 file(GLOB SOURCE_FILES_LOADINGSCREEN LoadingScreen/*.cpp)
 SOURCE_GROUP("Source Files\\LoadingScreen\\" FILES ${HEADER_FILES_LOADINGSCREEN} ${SOURCE_FILES_LOADINGSCREEN})
@@ -38,6 +42,7 @@ add_executable(${NAME} WIN32
 	${HEADER_FILES} ${SOURCE_FILES} 
 	${HEADER_FILES_GAMESCREEN} ${SOURCE_FILES_GAMESCREEN}
 	${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD}
+	${HEADER_FILES_GAMEWORLD_COMPONENTS} ${SOURCE_FILES_GAMEWORLD_COMPONENTS}
 	${HEADER_FILES_LOADINGSCREEN} ${SOURCE_FILES_LOADINGSCREEN}
 	${HEADER_FILES_LOGINSCREEN} ${SOURCE_FILES_LOGINSCREEN}
 	${HEADER_FILES_CHARSELECT} ${SOURCE_FILES_CHARSELECT}
