Started on map generation. The basics for generating a dungeon level is now added on the server side, but the tile data is not per-player yet, nor is the generated data persisted, or the map data synced to the client(s). So this is server-only so far, but a meager start.
Later we probably want to make the architect much more advanced. Right now it just support basic bsp generation.

--- a/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
@@ -22,6 +22,10 @@ file(GLOB HEADER_FILES_COMPONENTS GameWorld/Components/*.h)
 file(GLOB SOURCE_FILES_COMPONENTS GameWorld/Components/*.cpp)
 SOURCE_GROUP("Source Files\\GameWorld\\Components\\" FILES ${HEADER_FILES_COMPONENTS} ${SOURCE_FILES_COMPONENTS})
 
+file(GLOB HEADER_FILES_PROCEDURAL GameWorld/Procedural/*.h)
+file(GLOB SOURCE_FILES_PROCEDURAL GameWorld/Procedural/*.cpp)
+SOURCE_GROUP("Source Files\\GameWorld\\Procedural\\" FILES ${HEADER_FILES_PROCEDURAL} ${SOURCE_FILES_PROCEDURAL})
+
 file(GLOB HEADER_FILES_ZONES GameWorld/Zones/*.h)
 file(GLOB SOURCE_FILES_ZONES GameWorld/Zones/*.cpp)
 SOURCE_GROUP("Source Files\\GameWorld\\Zones\\" FILES ${HEADER_FILES_ZONES} ${SOURCE_FILES_ZONES})
@@ -35,6 +39,7 @@ add_executable(${NAME}
 	${HEADER_FILES_DATABASE} ${SOURCE_FILES_DATABASE}
 	${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD}
 	${HEADER_FILES_COMPONENTS} ${SOURCE_FILES_COMPONENTS}
+	${HEADER_FILES_PROCEDURAL} ${SOURCE_FILES_PROCEDURAL}
 	${HEADER_FILES_ZONES} ${SOURCE_FILES_ZONES}
 	${TOTEM_HEADER} 
 	${CL_HEADER})
