Move zone_map to GameWorld on server, moved map_tile_interface to Common in engine, and wrote custom server_map_tile and client_map_tile for Server and Client in engine (though client_map_tile might be moved to the client application, and not sit in the engine at all, as it can quickly get very client-specific).
Added client_vicinity_map too, and filled netevents.h with server to client event types for map sync handling.

Also did some function renaming in zone and zone_vicinity_*

--- a/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
@@ -19,6 +19,10 @@ file(GLOB HEADER_FILES_CLIENT_SCENE Client/Scene/*.h)
 file(GLOB SOURCE_FILES_CLIENT_SCENE Client/Scene/*.cpp)
 SOURCE_GROUP("Source Files\\Client\\Scene\\" FILES ${HEADER_FILES_CLIENT_SCENE} ${SOURCE_FILES_CLIENT_SCENE})
 
+file(GLOB HEADER_FILES_CLIENT_GAMEWORLD Client/GameWorld/*.h)
+file(GLOB SOURCE_FILES_CLIENT_GAMEWORLD Client/GameWorld/*.cpp)
+SOURCE_GROUP("Source Files\\Client\\GameWorld\\" FILES ${HEADER_FILES_CLIENT_GAMEWORLD} ${SOURCE_FILES_CLIENT_GAMEWORLD})
+
 file(GLOB HEADER_FILES_CLIENT_UI Client/UIFramework/*.h)
 file(GLOB SOURCE_FILES_CLIENT_UI Client/UIFramework/*.cpp)
 SOURCE_GROUP("Source Files\\Client\\UIFramework\\" FILES ${HEADER_FILES_CLIENT_UI} ${SOURCE_FILES_CLIENT_UI})
@@ -53,6 +57,7 @@ add_library(${NAME} STATIC
 	${HEADER_FILES} ${SOURCE_FILES} 
 	${HEADER_FILES_CLIENT_AUDIO} ${SOURCE_FILES_CLIENT_AUDIO}
 	${HEADER_FILES_CLIENT_SCENE} ${SOURCE_FILES_CLIENT_SCENE}
+	${HEADER_FILES_CLIENT_GAMEWORLD} ${SOURCE_FILES_CLIENT_GAMEWORLD}
 	${HEADER_FILES_CLIENT_UI} ${SOURCE_FILES_CLIENT_UI}
 	${HEADER_FILES_COMMON_GAMEWORLD} ${SOURCE_FILES_COMMON_GAMEWORLD}
 	${HEADER_FILES_COMMON_GAMEWORLD_COMPONENTS} ${SOURCE_FILES_COMMON_GAMEWORLD_COMPONENTS}
