Moved around some code, specifically into a new Zone folder under GameWorld for the server.

--- a/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
@@ -26,9 +26,9 @@ file(GLOB HEADER_FILES_PROCEDURAL GameWorld/Procedural/*.h)
 file(GLOB SOURCE_FILES_PROCEDURAL GameWorld/Procedural/*.cpp)
 SOURCE_GROUP("Source Files\\GameWorld\\Procedural\\" FILES ${HEADER_FILES_PROCEDURAL} ${SOURCE_FILES_PROCEDURAL})
 
-file(GLOB HEADER_FILES_ZONES GameWorld/Zones/*.h)
-file(GLOB SOURCE_FILES_ZONES GameWorld/Zones/*.cpp)
-SOURCE_GROUP("Source Files\\GameWorld\\Zones\\" FILES ${HEADER_FILES_ZONES} ${SOURCE_FILES_ZONES})
+file(GLOB HEADER_FILES_ZONE GameWorld/Zone/*.h)
+file(GLOB SOURCE_FILES_ZONE GameWorld/Zone/*.cpp)
+SOURCE_GROUP("Source Files\\GameWorld\\Zone\\" FILES ${HEADER_FILES_ZONE} ${SOURCE_FILES_ZONE})
 
 FIND_PACKAGE(ClanLib REQUIRED)
 file(GLOB CL_HEADER ${CL_DIR}/*.h)
@@ -40,7 +40,7 @@ add_executable(${NAME}
 	${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD}
 	${HEADER_FILES_COMPONENTS} ${SOURCE_FILES_COMPONENTS}
 	${HEADER_FILES_PROCEDURAL} ${SOURCE_FILES_PROCEDURAL}
-	${HEADER_FILES_ZONES} ${SOURCE_FILES_ZONES}
+	${HEADER_FILES_ZONE} ${SOURCE_FILES_ZONE}
 	${TOTEM_HEADER} 
 	${CL_HEADER})
 
